# wehandle-aws-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/automation_aws_utils/: __init__.py  s3_utils.py
src/aws_utils/: s3_utils.py
tests/: test_s3_utils.py  test_secrets_manager.py
